--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,11 @@ services:
     ports:
       - "8080:8080"
     environment:
-      PORT: 8080
-      NODE_ENV: production
+      PORT: ${PORT}
+      NODE_ENV: ${NODE_ENV}
+      MONGO_URI: ${MONGO_URI}
+      MAIL_HOST: ${MAIL_HOST}
+      MAIL_PORT: ${MAIL_PORT}
+      SMTP_USERNAME: ${SMTP_USERNAME}
+      SMTP_PASSWORD: ${SMTP_PASSWORD}
+      FRONTEND_URL: ${FRONTEND_URL}
